# regelum

./: .coveragerc  .cursorignore  .gitignore  .pre-commit-config.yaml  .pylintrc  PROMT.md  README.md  conftest.py  mkdocs.yaml  mkdocs.yml  mypy.ini  prototyping.py  pyproject.toml  rl_pipeline_parallel  ruff.toml  versions.json
.github/workflows/: coverage.yml  docs.yml  publish.yml  pylint.yml
0.2.3/: index.html
0.2.3/authors/: index.html
0.2.3/search/: search_index.json
0.2.4/authors/: index.html
0.2.5/: index.html  sitemap.xml
0.2.5/concepts/: index.html
0.2.5/search/: search_index.json
0.3.0/: index.html
0.3.0/search/: search_index.json
0.3.1/: sitemap.xml
0.3.1/search/: search_index.json
0.3.2/: 404.html  index.html
0.3.2/authors/: index.html
0.3.2/search/: search_index.json
0.3.2/stylesheets/: extra.css
0.3.3/concepts/: index.html
0.3.3/search/: search_index.json
0.3.4/search/: search_index.json
0.3.6/: sitemap.xml
0.3.6/stylesheets/: extra.css
0.3.7/: 404.html  index.html  sitemap.xml
0.3.7/authors/: index.html
0.3.7/javascripts/: mathjax.js
0.3.7/search/: search_index.json
0.3.7/stylesheets/: extra.css
0.3.8/: sitemap.xml
0.3.8/concepts/: index.html
artifacts/dubuisson2019/: MATCH.md  calibration_params.json  calibration_report.md  dubuisson2019.txt
docs/: README.md  api.md  authors.md  docker-compose.yml  getting-started.md  index.md  learn.md
docs/concepts/: compilation.md  connections.md  continuous.md  index.md  nodes.md  phases.md  ports.md  runtime.md  state.md  transitions.md
docs/examples/: controlled_pendulum.md  free_pendulum.md  two_inverter_static_droop.md
docs/overrides/: main.html
docs/src/: index.md
docs/stylesheets/: extra.css
examples/:  bt.py  __init__.py  _openmodelica_microgrid_worker.py  _openmodelica_static_droop_controller.py  benchmark_parallel.py  benchmark_tree.py  bounded_loop.py  c1_violation.py  c2star_cycle.py  c2star_split_writes.py  c3_violation.py  cartpole_mpc_viz.py  compare_one_to_one_microgrid.py  complex.py  complex_c3_partition.py  complex_safety_loop.py  dc_motor_ukf.py  dc_motor_viz.py  demonstration.ipynb  double_pendulum_viz.py  dubuisson2019_calibration.py  dubuisson2019_digitize_pdf.py  dubuisson2019_scope_reconstruction.py  dubuisson2019_simulink_reconstruction.py  dubuisson2019_water_treatment.py  instance_connect.py  json_enrichment.py  kin_point_mpc.py  linear_systems_multiple_mpc.py  mohanty2023_smart_home.py  native_one_to_one_microgrid.py  native_one_to_one_microgrid_ode_api.py  native_two_inverter_microgrid.py  openmodelica_microgrid_static_droop.py  pendulum.py  pendulum_energy_viz.py  pendulum_friction_energy_viz.py  pendulum_lqr_viz.py  pendulum_motor_backstepping.py  pendulum_motor_energy_viz.py  (+21 more)
examples/controlled_pendulum/: README.md  __init__.py  app.py  rg-examples-controlled-pendulum.py  standalone.py
examples/free_pendulum/: README.md  __init__.py  app.py  rg-examples-free-pendulum.py  standalone.py
examples/two_inverter_static_droop/: README.md  __init__.py  standalone.py
latest/: 404.html  index.html  sitemap.xml
latest/api/: index.html
latest/authors/: index.html
latest/concepts/: index.html
latest/getting-started/: index.html
latest/search/: search_index.json
latest/stylesheets/: extra.css
old_snippets/: base_new.py  objective.py  parallel.py
references/: PV_wind_bat_DC_Microgrid.slx  PV_wind_bat_DC_Microgrid_structure.md
references/dubuisson2019_targets/: README.md  fig11_battery_current_a.csv  fig11_dc_bus_voltage_v.csv  fig11_dump_load_current_a.csv  fig11_soc_percent.csv  fig11_wind_current_a.csv  fig9_battery_current_a.csv  fig9_dc_bus_voltage_v.csv  fig9_frequency_hz.csv  fig9_load_current_a.csv  fig9_load_power_kw.csv  fig9_load_voltage_magnitude_v.csv  fig9_soc_percent.csv  fig9_wind_current_a.csv
regelum/: __init__.py  model.py  typing.py  utils.py
regelum/environment/: graph.py  node.py  transistor.py
regelum/node/: __init__.py  base.py  graph.py  logging.py  (+2 more)
scripts/: update_black_badge.sh  update_coverage.sh  use_vscode_debugger_pytest.txt
tests/: test_buffer.py  test_databuffer_node.py  test_environment.py  test_graph.py  test_integrator.py  test_lag.py  test_memory.py  test_node.py  test_node_resolution.py  test_ode.py  test_output.py  test_parallel.py  test_pendulum.py  test_pendulum_integration.py  test_reset_behaviour.py  test_reset_factory.py  test_reward.py  test_sample_and_hold.py  test_time_and_continuous_protocol.py  typecheck_api.py
(+186 files in other folders)
