[project]
name = "regelum"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton Bolychev", email = "bolychev.anthon@yandex.ru" }
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "casadi>=3.7.2",
    "matplotlib>=3.10.0",
    "scipy>=1.17.1",
    "z3-solver>=4.16.0.0",
]

[project.scripts]
regelum-pendulum = "regelum.examples.pendulum:main"
regelum-instance-connect = "regelum.examples.instance_connect:main"
regelum-json-enrichment = "regelum.examples.json_enrichment:main"
regelum-dubuisson2019 = "regelum.examples.dubuisson2019_water_treatment:main"
regelum-dubuisson2019-calibrate = "regelum.examples.dubuisson2019_calibration:main"
regelum-dubuisson2019-digitize = "regelum.examples.dubuisson2019_digitize_pdf:main"
regelum-video-player = "regelum.examples.video_player:main"
regelum-openmodelica-static-droop = "regelum.examples.openmodelica_microgrid_static_droop:main"
regelum-native-two-inverter-microgrid = "regelum.examples.native_two_inverter_microgrid:main"
regelum-native-one-to-one-microgrid = "regelum.examples.native_one_to_one_microgrid:main"
regelum-native-one-to-one-microgrid-ode-api = "regelum.examples.native_one_to_one_microgrid_ode_api:main"
regelum-compare-one-to-one-microgrid = "regelum.examples.compare_one_to_one_microgrid:main"

[tool.hatch.build.targets.wheel]
packages = ["src/regelum", "examples"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/regelum/_version.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "prek>=0.3.11",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mike>=2.1.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
